--- a/css/styles.css
+++ b/css/styles.css
@@ -282,6 +282,23 @@ body {
     flex-basis: calc((100% - 72px)/4);
 }
 
+.plus-list-picture {
+    display: flex;
+    flex-basis: calc((100% - 72px)/4);
+    margin-bottom: 8px;
+    height: 112px;
+    background: #F4F4FD;
+    border-radius: 4px;
+    justify-content: center;
+    align-items: center;
+}
+
+/* .plus-list-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
 .plus-list-title {
     font-weight: 600;
     font-size: 20px;
@@ -388,15 +405,15 @@ body {
     justify-content: space-between;
 }
 
+.customers-list-item {
+    flex-basis: calc((100% - 120px)/6) ;
+}
+
 .customers-list-link {
     display: flex;
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
-    left: 0%;
-    right: 0%;
-    top: 0%;
-    bottom: 0%;
     border: 1px solid #8E8F99;
     border-radius: 4px;
 }
@@ -410,8 +427,7 @@ body {
     border-color: #4D5AE5;
 }
 
-.customers-list-icon:hover,
-.customers-list-icon:focus {
+.customers-list-link:hover .customers-list-icon {
     fill: #4D5AE5 ;
 }
 
