--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,9 @@ body {
     align-items: center;
 }
 
+.menu-item {
+    position: relative;
+}
 
 .menu-item:not(:last-child) {
     margin-right: 40px;
@@ -151,7 +154,10 @@ body {
     letter-spacing: 0.02em; 
     color: var(--primary-text-color);
     padding-top: 24px;
-    padding-bottom: 24px; 
+    padding-bottom: 24px;
+    padding-left: 6px;
+    padding-right: 6px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .menu-link:hover,
@@ -159,8 +165,21 @@ body {
     color: var(--primary-third-color);
 }
 
+
 .is-active {
     color: var(--primary-third-color);
+}
+
+.is-active::after {
+    content:"";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color: #4D5AE5;
+    border-radius: 2px;
+    display: block;
+    margin-top: 20px;
+    left: 0;
 }
 
 .list {
@@ -178,6 +197,7 @@ body {
     margin-right: 40px;
     padding-top: 24px;
     padding-bottom: 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mail:hover,
@@ -194,6 +214,7 @@ body {
     color: var(--primary-secondary-color);
     padding-top: 24px;
     padding-bottom: 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .phone-number:hover,
@@ -246,6 +267,7 @@ body {
     border: none;
     margin-left: auto;
     margin-right: auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn:hover,
@@ -416,10 +438,12 @@ body {
     box-sizing: border-box;
     border: 1px solid #8E8F99;
     border-radius: 4px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-list-icon {
     fill: #8E8F99;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-list-link:hover,
@@ -482,6 +506,7 @@ body {
 
 .footer .social-list-link {
     background-color: rgba(255, 255, 255, 0.1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer .social-list-link:hover,
@@ -522,6 +547,8 @@ body {
     cursor: pointer;
     border: 1px solid #E7E9FC;
     border-radius: 4px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-btn:hover,
@@ -550,6 +577,7 @@ body {
     flex-basis: calc((100% - 48px)/3);
     /* margin-right: 24px;
     margin-bottom: 48px; */
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .examples-item:hover,
@@ -590,3 +618,89 @@ body {
     letter-spacing: 0.02em;
     color: #F4F4FD;
 }
+
+.overlay {
+    position: absolute;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
+    background-color: #4D5AE5;
+    padding-left: 32px;
+    padding-top: 40px;
+    padding-right: 32px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    transform: translate(0, 100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.examples-item-wrapper {
+    position: relative;
+    overflow: hidden;
+}
+
+.examples-item-link:hover .overlay,
+.examples-item-link:focus .overlay {
+    transform: translate(0, 0);
+}
+
+/*======================== MODAL WINDOW ========================  */
+.backdrop {
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 408px;
+    height: 576px;
+    background-color: #FCFCFC;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+
+.modal-close-btn {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    border-color: #E7E9FC;
+}
+
+/*======================== /MODAL WINDOW ========================  */
