--- a/css/styles.css
+++ b/css/styles.css
@@ -614,7 +614,7 @@ body {
 }
 
 .exaples-payment {
-    font-family: 'Roboto';
+    font-family: var(--primary-font);
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -625,7 +625,7 @@ body {
 
 .overlay {
     position: absolute;
-    font-family: 'Roboto';
+    font-family: var(--primary-font);
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -706,6 +706,22 @@ body {
 .modal-close-btn:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-color: #E7E9FC;
+}
+
+.modal-item {
+    width: 360px;
+    height: 24px;
+    left: 540px;
+    top: 152px;
+    font-family: var(--primary-font);
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+    margin: 72px 24px 16px 24px;
 }
 
 /*======================== /MODAL WINDOW ========================  */
